Fix double scrollbar issue

--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,7 @@ body {
 
 .page {
     display: flex;
+    height: 100vh;
 }
 
 
